--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,6 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: python_app
+    restart: always
     ports:
       - "5000:5000"
